Refactor for Python names

--- a/navbar.html
+++ b/navbar.html
@@ -46,8 +46,8 @@
                 </li>
                 <li>
                   <a class='dropdown-item'
-                   href='LoadConfig.html'
-                   id='LoadConfig_link'
+                   href='load_config.html'
+                   id='load_config_link'
                    target='_new'>Load New Cruise Def</a>
                 </li>
               </ul>
