--- a/supervisor/supervisor.html
+++ b/supervisor/supervisor.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 
 <!--//
-//  Supervisor.js
+//  supervisor.js
 //
 //  functions to read status of daemons from XMLRPC interface
 //  presented by supervisord (assuming you included the 
 //  web interface)
 //
 //  For a full(-ish) explanation of what's going on here, see
-//  Supervisorjs.md
+//  supervisorjs.md
 //
 -->
 <html>
@@ -41,6 +41,6 @@
     <table id='daemon-table' class='table table-striped table-responsive-sm'>
     </table>
     <script src="/js/bootstrap.bundle.min.js"></script>
-    <script src="/Supervisor/Supervisor.js"></script>
+    <script src="/supervisor/supervisor.js"></script>
 </body>
 </html>
