--- a/html/load_config.html
+++ b/html/load_config.html
@@ -6,9 +6,9 @@
 -->
     <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-    <link rel='stylesheet' id='theme-css' href='/js/bootstrap.min.css'>
-    <link rel='stylesheet' href='/js/bootstrap-icons.min.css' />
-    <link rel='stylesheet' href='/js/iziToast/css/iziToast.css' />
+    <link rel='stylesheet' id='theme-css' href='../js/bootstrap.min.css'>
+    <link rel='stylesheet' href='../js/bootstrap-icons.min.css' />
+    <link rel='stylesheet' href='../js/iziToast/css/iziToast.css' />
     <title>Load Configuration File</title>
     <meta charset="utf-8">
 <!-- FIXME:  Wrap this in a CSS file -->
