--- a/html/index.html
+++ b/html/index.html
@@ -6,9 +6,9 @@
     -->
     <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-    <link rel="stylesheet" id="theme-css" href="../js/bootstrap.min.css">
-    <link rel="stylesheet"  href="../js/iziToast/css/iziToast.css">
-    <link rel="stylesheet" href="../js/index.css">
+    <link rel="stylesheet" id="theme-css" href="/js/bootstrap.min.css">
+    <link rel="stylesheet"  href="/js/iziToast/css/iziToast.css">
+    <link rel="stylesheet" href="/js/index.css">
     <title>OpenRVDAS Cruise Management</title>
   </head>
   <body>
@@ -107,14 +107,14 @@
     <p style="font-size:70%">
       <a href="/docs/README.md"> OpenRVDAS (c)2018 David Pablo Cohn</a>
     </p>
-    <script src="../js/bootstrap.bundle.min.js"></script>
-    <script src="../js/json5.min.js"></script>
-    <script src="../js/iziToast/js/iziToast.js"></script>
-    <script src="../js/config.js"></script>
-    <script src='../js/navbar.js'></script>
-    <script src="../js/index.html.js"></script>
-    <script src="../js/modals.js"></script>
-    <script src="../js/stderr_log_utils.js"></script>
-    <script src='../js/websocket.js'></script>
+    <script src="/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/json5.min.js"></script>
+    <script src="/js/iziToast/js/iziToast.js"></script>
+    <script src="/js/config.js"></script>
+    <script src='/js/navbar.js'></script>
+    <script src="/js/index.html.js"></script>
+    <script src="/js/modals.js"></script>
+    <script src="/js/stderr_log_utils.js"></script>
+    <script src='/js/websocket.js'></script>
   </body>
 </html>
