Re-un-fixing cgi path

--- a/html/modals.html
+++ b/html/modals.html
@@ -27,7 +27,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <form method="post" 
-            action="/sqlite-gui/cgi-bin/cruise_mode.cgi"
+            action="/cgi-bin/cruise_mode.cgi"
             onsubmit="CGI.AjaxPost(event, this, 'CruiseModeModal')">
       <div class="modal-body" id="CruiseModeModalBody"></div>
       <div id="ChangeMode_modalfooter" class="modal-footer">
@@ -52,7 +52,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <form method="post" 
-            action="/sqlite-gui/cgi-bin/logger_mode.cgi"
+            action="/cgi-bin/logger_mode.cgi"
             onsubmit="CGI.AjaxPost(event, this, 'LoggerModal')">
       <div class="modal-body" id="LoggerModeModalBody"></div>
       <div id="Logger_modalfooter" class="modal-footer">
@@ -78,7 +78,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <form method="post"
-            action="/sqlite-gui/cgi-bin/file_browser.cgi"
+            action="/cgi-bin/file_browser.cgi"
             onsubmit="CGI.AjaxPost(event, this, 'LoadButton_Modal')">
       <div class="modal_body" id="LoadButtonModeModalBody"></div>
       <div id="LoadButton_mb" class="modal-body"></div>
