--- a/html/navbar.html
+++ b/html/navbar.html
@@ -111,7 +111,7 @@
               <form class='m-3' 
                     id='login_form' 
                     method=POST 
-                    action='/sqlite-gui/cgi-bin/auth.cgi'
+                    action='/cgi-bin/auth.cgi'
                     onsubmit='LoginButton.pressed(event, this)'>
                 <div class='form-group'>
                   <input type='text' class='form-control'
