--- a/html/load_config.html
+++ b/html/load_config.html
@@ -97,7 +97,7 @@
     <script src='js/js-yaml.min.js'></script>
     <script src="/js/ace/src-noconflict/ace.js"></script>
 -->
-    <script src='LoadConfig.js'></script>
+    <script src='js/load_config.js'></script>
     <hr>
     <p style="font-size:70%">
       <a href="/docs/README.md"> OpenRVDAS (c)2018 David Pablo Cohn</a>
