--- a/html/load_config.html
+++ b/html/load_config.html
@@ -6,9 +6,9 @@
 -->
     <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-    <link rel='stylesheet' id='theme-css' href='../js/bootstrap.min.css'>
-    <link rel='stylesheet' href='../js/bootstrap-icons.min.css' />
-    <link rel='stylesheet' href='../js/iziToast/css/iziToast.css' />
+    <link rel='stylesheet' id='theme-css' href='/js/bootstrap.min.css'>
+    <link rel='stylesheet' href='/js/bootstrap-icons.min.css' />
+    <link rel='stylesheet' href='/js/iziToast/css/iziToast.css' />
     <title>Load Configuration File</title>
     <meta charset="utf-8">
 <!-- FIXME:  Wrap this in a CSS file -->
@@ -74,30 +74,30 @@
     <script src="/js/iziToast/js/iziToast.js"></script>
     <script src="/js/json5.min.js"></script>
     <!-- FIXME:  Why do links get added twice ? -->
-    <script src="config.js"></script>
-    <script src="modals.js"></script>
+    <script src="/js/config.js"></script>
+    <script src="/js/modals.js"></script>
     <script src="/js/bootstrap.bundle.min.js"></script>
-    <script src='navbar.js'></script>
-    <script src='websocket.js'></script>
+    <script src='/js/navbar.js'></script>
+    <script src='/js/websocket.js'></script>
 <!-- Way too much code to make CodeMirror work.  Maybe switch to ace? -->
-    <script src='js/js-yaml.min.js'></script>
-    <link rel='stylesheet' href='js/codemirror5/codemirror.css'>
-    <link rel='stylesheet' href='js/codemirror5/lint/lint.css'>
-    <link rel='stylesheet' href='js/codemirror5/addons/simplescrollbars.css'>
-    <script src='js/codemirror5/codemirror.js'></script>
-    <script src='js/codemirror5/mode/yaml.js'></script>
-    <script src='js/codemirror5/lint/lint.js'></script>
+    <script src='/js/js-yaml.min.js'></script>
+    <link rel='stylesheet' href='/js/codemirror5/codemirror.css'>
+    <link rel='stylesheet' href='/js/codemirror5/lint/lint.css'>
+    <link rel='stylesheet' href='/js/codemirror5/addons/simplescrollbars.css'>
+    <script src='/js/codemirror5/codemirror.js'></script>
+    <script src='/js/codemirror5/mode/yaml.js'></script>
+    <script src='/js/codemirror5/lint/lint.js'></script>
     <!--
     <script src='js/codemirror5/lint/yaml-lint.js'></script>
     -->
-    <script src='js/codemirror5/lint/ylint.js'></script>
-    <script src='js/codemirror5/addons/simplescrollbars.js'></script>
+    <script src='/js/codemirror5/lint/ylint.js'></script>
+    <script src='/js/codemirror5/addons/simplescrollbars.js'></script>
 <!-- Whew !! ... 9 files for codemirror.  Grrr....  -->
 <!--
-    <script src='js/js-yaml.min.js'></script>
+    <script src='/js/js-yaml.min.js'></script>
     <script src="/js/ace/src-noconflict/ace.js"></script>
 -->
-    <script src='js/load_config.js'></script>
+    <script src='/js/load_config.js'></script>
     <hr>
     <p style="font-size:70%">
       <a href="/docs/README.md"> OpenRVDAS (c)2018 David Pablo Cohn</a>
