--- a/html/load_config.html
+++ b/html/load_config.html
@@ -6,9 +6,9 @@
 -->
     <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-    <link rel='stylesheet' id='theme-css' href='../js/bootstrap.min.css'>
-    <link rel='stylesheet' href='../js/bootstrap-icons.min.css' />
-    <link rel='stylesheet' href='../js/iziToast/css/iziToast.css' />
+    <link rel='stylesheet' id='theme-css' href='/js/bootstrap.min.css'>
+    <link rel='stylesheet' href='/js/bootstrap-icons.min.css' />
+    <link rel='stylesheet' href='/js/iziToast/css/iziToast.css' />
     <title>Load Configuration File</title>
     <meta charset="utf-8">
 <!-- FIXME:  Wrap this in a CSS file -->
@@ -74,11 +74,11 @@
     <script src="/js/iziToast/js/iziToast.js"></script>
     <script src="/js/json5.min.js"></script>
     <!-- FIXME:  Why do links get added twice ? -->
-    <script src="config.js"></script>
-    <script src="modals.js"></script>
+    <script src="/js/config.js"></script>
     <script src="/js/bootstrap.bundle.min.js"></script>
-    <script src='navbar.js'></script>
-    <script src='websocket.js'></script>
+    <script src="/js/modals.js"></script>
+    <script src='/js/navbar.js'></script>
+    <script src='/js/websocket.js'></script>
 <!-- Way too much code to make CodeMirror work.  Maybe switch to ace? -->
     <script src='js/js-yaml.min.js'></script>
     <link rel='stylesheet' href='js/codemirror5/codemirror.css'>
