style tweak: make full width actually full width

--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
     <title>OpenRVDAS Cruise Management</title>
   </head>
   <body>
-    <div class='container-fluid'>
+    <div class='container-fluid' style='--bs-gutter-x:0'>
     <!--# include file='./navbar.html' -->
     <h1>OpenRVDAS Dashboard</h1>
 
