--- a/html/navbar.html
+++ b/html/navbar.html
@@ -7,7 +7,7 @@
 
 -->
     <!-- navbar -->
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark py-0">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark py-0 sticky-top">
       <div class="container-fluid">
         <a class="navbar-brand">
             <img src='./logo.svg' height='50' width='50' /> 
